# GoldDigger

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mysqlstoragebase.cpp  mysqlstoragebase.h  stockInfo.py  stockinfogetterbase.cpp  stockinfogetterbase.h  work_thread_base.cpp  work_thread_base.h
